--- a/style/sass/module/vo.scss
+++ b/style/sass/module/vo.scss
@@ -19,6 +19,7 @@
 // import ui css
 @import "../ui/ui_button";
 @import "../ui/ui_pop";
+@import "../ui/ui_tip";
 @import "../ui/ui_form";
 @import "../ui/ui_tab";
 @import "../ui/ui_table";
@@ -97,3 +98,63 @@ body{
     width: 100%;
   }
 }
+
+
+// fold
+.fold {
+  margin:  20px 0;
+  .fold-hd {
+    height: 30px;
+    line-height: 30px;
+    @include clearfix();
+  }
+  h3 {
+    float: left;
+    font-size: 14px;
+    font-weight: normal;
+  }
+}
+
+// chart
+.sum-view{
+  width: 380px;
+  @include clearfix();
+  .cell-view{
+    float: left;
+    width: 50%;
+    text-align: center;
+    font-size: 14px;
+    &:first-child{
+      border-right: 1px solid #ccc;
+    }
+    dd{
+      color:$red;
+      font-size: 16px;
+    }
+  }
+}
+.sum-view,
+.chart{
+  padding: 20px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+
+
+// m-poptip
+.m-poptip{
+  display: inline-block;
+  position: relative;
+  .iconfont-feedback{
+    color: #f4ab10;
+    vertical-align: baseline;
+  }
+  .poptip{
+    bottom: 28px;
+    left: -21px;
+    width: 160px;
+    text-align: left;
+  }
+}
+
+
