--- a/style/sass/module/vo.scss
+++ b/style/sass/module/vo.scss
@@ -21,7 +21,7 @@
 @import "../ui/ui_pop";
 @import "../ui/ui_tip";
 @import "../ui/ui_form";
-@import "../ui/ui_tab";
+@import "../ui/ui_tab_vo";
 @import "../ui/ui_table";
 @import "../ui/ui_pager";
 
@@ -158,3 +158,25 @@ body{
 }
 
 
+// tab
+.tab{
+  margin-top: 30px;
+}
+td{
+  background-color: #fff;
+}
+.product{
+  img{
+    margin-left: -65px;
+    max-width: 60px;
+  }
+  a{
+    display: inline-block;
+    padding-left: 65px;
+    color:#333;
+    &:hover{
+      color:#e04b43;
+      text-decoration: none;
+    }
+  }
+}
