--- a/style/css/module/vo.css
+++ b/style/css/module/vo.css
@@ -2166,6 +2166,7 @@ body {
 
 .sum-view,
 .chart {
+  margin-bottom: 10px;
   padding: 20px;
   border: 1px solid #dddddd;
   background-color: #fff;
@@ -2184,6 +2185,10 @@ body {
   left: -21px;
   width: 160px;
   text-align: left;
+  display: none;
+}
+.m-poptip:hover .poptip {
+  display: block;
 }
 
 .tab {
