--- a/style/sass/module/vo.scss
+++ b/style/sass/module/vo.scss
@@ -135,6 +135,7 @@ body{
 }
 .sum-view,
 .chart{
+  margin-bottom: 10px;
   padding: 20px;
   border: 1px solid #ddd;
   background-color: #fff;
@@ -154,6 +155,10 @@ body{
     left: -21px;
     width: 160px;
     text-align: left;
+    display: none;
+  }
+  &:hover .poptip{
+    display: block;
   }
 }
 
