--- a/style/sass/component/vo_layout.scss
+++ b/style/sass/component/vo_layout.scss
@@ -118,10 +118,19 @@
   border-bottom: 1px solid #ccc;
   color: #4c4c4c;
   font-size: 14px;
+  @include clearfix();
   h2 {
+    float: left;
+    margin-right: 10px;
     margin-top: 3px;
     font-size: 14px;
     font-weight: 700;
+  }
+  p{
+    float: left;
+    margin-top: 5px;
+    color:$grayLight;
+    font-size: 12px;
   }
 }
 .main-bd{
@@ -134,6 +143,7 @@
 .sch {
   width: 100%;
   padding: 15px 0 1px 0;
+  margin-bottom: 30px;
   background-color: #f2f7fa;
   border: 1px solid #d3dde7;
   -webkit-box-sizing: border-box;
@@ -203,7 +213,7 @@
 }
 
 .sch-rst{
-  margin: 25px 0 5px;
+  margin-bottom: 5px;
   text-align: right;
   strong{
     color: $red;
