--- a/style/sass/module/vo.scss
+++ b/style/sass/module/vo.scss
@@ -7,6 +7,7 @@
 
 // import base css
 @import "../base/lib";
+@import "../base/bootstrap";
 @import "../base/reset";
 @import "../base/common";
 @import "../base/atom";
