--- a/style/css/module/vo.css
+++ b/style/css/module/vo.css
@@ -10212,7 +10212,6 @@ body {
 
 .msg-record,
 .user-info {
-  height: 534px;
   border: 1px solid #cccccc;
   background-color: #fff;
 }
@@ -10231,26 +10230,38 @@ body {
   overflow: auto;
 }
 
-.msg-record {
-  float: left;
-  width: 800px;
-}
 .msg-record .bd {
   height: 450px;
+}
+.msg-record .loading {
+  padding-top: 100px;
+  font-size: 24px;
+  text-align: center;
 }
 .msg-record .msg-ft {
   padding: 10px;
   background-color: #f2f2f2;
+  text-align: center;
+  cursor: pointer;
+  color: #06b;
+}
+.msg-record .msg-ft .iconfont-arrow-btm {
+  vertical-align: -1px;
 }
 .msg-record .msg {
   margin-bottom: 15px;
 }
 .msg-record .msg dt {
   margin-bottom: 3px;
-  color: #999999;
 }
 .msg-record .msg dd {
   font-size: 14px;
+}
+.msg-record .msg-in dt {
+  color: green;
+}
+.msg-record .msg-out dt {
+  color: #06b;
 }
 
 .user-info {
@@ -10269,6 +10280,21 @@ body {
   color: #999999;
 }
 .user-info .btn-xl {
+  width: 100%;
+}
+
+.prod-show {
+  overflow: hidden;
+  padding-left: 110px;
+}
+.prod-show dt {
+  float: left;
+  max-width: 100px;
+  max-height: 100px;
+  margin-left: -110px;
+  text-align: center;
+}
+.prod-show dt img {
   width: 100%;
 }
 
