--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -2112,7 +2112,7 @@ body {
   font-size: 24px;
   text-align: center;
 }
-.pop-tip .mate-txt .iconfont-kefu {
+.pop-tip .mate-txt .iconfont-user {
   font-size: 32px;
   color: #4498ee;
 }
