--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -943,7 +943,7 @@ body{
     margin-top: 30px;
     font-size: 24px;
     text-align: center;
-    .iconfont-kefu{
+    .iconfont-user{
       font-size:32px;
       color:#4498ee;
     }
