--- a/style/sass/module/vo.scss
+++ b/style/sass/module/vo.scss
@@ -60,21 +60,23 @@ body{
 
 .msg-record{
   .bd{
-    height: 450px;
+    height: 650px;
   }
   .loading{
     padding-top: 100px;
     font-size: 24px;
     text-align: center;
-  }.msg-ft{
-    padding: 10px;
-    background-color: #f2f2f2;
+  }
+  .msg-more{
+    margin-bottom: 10px;
     text-align: center;
-    cursor: pointer;
-    color:#06b;
-    .iconfont-arrow-btm{
-      vertical-align: -1px;
+    a{
+      color:#06b;
+      &:hover{
+        color:#e04b43;
+      }
     }
+
   }
   .msg{
     margin-bottom: 15px;
