--- a/style/sass/component/vo_layout.scss
+++ b/style/sass/component/vo_layout.scss
@@ -204,6 +204,7 @@
 
   .txt-date {
     width: 90px;
+    background: url("../../../img/icon_date.png") center right no-repeat #fff;
   }
   .drop-lst {
     width: 100%;
