--- a/style/css/module/vo.css
+++ b/style/css/module/vo.css
@@ -8896,6 +8896,7 @@ textarea:-ms-input-placeholder {
 }
 .sch-item-bd .txt-date {
   width: 90px;
+  background: url("../../../img/icon_date.png") center right no-repeat white;
 }
 .sch-item-bd .drop-lst {
   width: 100%;
