--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -431,7 +431,11 @@ body{
           margin-top: 5px;
         }
         .iconfont-user{
+          padding: 3px;
           margin-right: 5px;
+          border: 2px solid #666;
+          border-radius: 50%;
+          background-color: #fff;
           font-size: 24px;
         }
       }
