--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -2141,6 +2141,7 @@ body {
   margin-top: 30px;
   font-size: 24px;
   text-align: center;
+  word-break: break-all;
 }
 .pop-tip .mate-txt .iconfont-user {
   font-size: 32px;
