--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -976,6 +976,7 @@ body{
     margin-top: 30px;
     font-size: 24px;
     text-align: center;
+    word-break: break-all;
     .iconfont-user{
       font-size:32px;
       color:#4498ee;
