--- a/style/css/module/vo.css
+++ b/style/css/module/vo.css
@@ -10142,7 +10142,8 @@ table td {
 
 .page-nav-form {
   float: right;
-  line-height: 26px;
+  margin-top: 3px;
+  line-height: 22px;
   vertical-align: middle;
 }
 
