--- a/style/css/ui/ui_pager.css
+++ b/style/css/ui/ui_pager.css
@@ -122,7 +122,8 @@
 
 .page-nav-form {
   float: right;
-  line-height: 26px;
+  margin-top: 3px;
+  line-height: 22px;
   vertical-align: middle;
 }
 
