--- a/style/sass/ui/ui_pager.scss
+++ b/style/sass/ui/ui_pager.scss
@@ -122,7 +122,8 @@
 
 .page-nav-form {
   float: right;
-  line-height: 26px;
+  margin-top: 3px;
+  line-height: 22px;
   vertical-align: middle;
 }
 
