--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -424,12 +424,13 @@ body{
         min-width: 210px;
         max-width: 280px;
         dt{
-          font-size: 14px;
-          font-weight: bold;
           width: 100%;
+          height: 60px;
           overflow: hidden;
           white-space: nowrap;
           text-overflow: ellipsis;
+          font-size: 14px;
+          font-weight: bold;
         }
         dd{
           padding-left: 28px;
