--- a/style/css/module/vo.css
+++ b/style/css/module/vo.css
@@ -10498,3 +10498,10 @@ td {
   font-size: 18px;
   color: #fb982a;
 }
+
+.tip .iconfont {
+  float: left;
+  margin: 1px 0 0 -25px;
+  font-size: 22px;
+  color: #4499ee;
+}
