--- a/style/sass/module/vo.scss
+++ b/style/sass/module/vo.scss
@@ -318,3 +318,13 @@ td{
     color: #fb982a;
   }
 }
+
+
+.tip{
+  .iconfont{
+    float: left;
+    margin: 1px 0 0 -25px;
+    font-size: 22px;
+    color: #4499ee
+  }
+}
