--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -1007,9 +1007,9 @@ body{
     top: 10px;
     right: 10px;
 
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
     border-radius: 50%;
     background: rgba(0,0,0,0.6);
     color: #fff;
@@ -1017,6 +1017,9 @@ body{
     cursor: pointer;
     &:hover{
       background-color: #f42;
+    }
+    .iconfont-close{
+      font-size: 12px;
     }
   }
   img{
