--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -145,7 +145,9 @@ body{
   height: 32px;
   line-height: 32px;
   padding-left: 20px;
+  margin-bottom: 1px;
   background-color: #3387dd;
+  box-shadow: inset 0 0px 7px #4078bb;
   input::-webkit-input-placeholder,
   textarea::-webkit-input-placeholder {
     color: #b7cceb;
@@ -232,7 +234,7 @@ body{
   cursor: pointer;
   @include clearfix();
   &:hover{
-    background-color: #3387dd;
+    background-color: #5ba6f0;
   }
   .avatar{
     float: left;
@@ -270,8 +272,11 @@ body{
     color: #88ccff;
     overflow: hidden;
     .msg{
-      @include text-clip(60px);
+      @include text-clip(100px);
       float: left;
+    }
+    .msg-s{
+      @include text-clip(60px);
     }
     .time{
       float: right;
@@ -284,7 +289,7 @@ body{
   }
 }
 .chat-item.on{
-  background-color: #5ba6f0;
+  background-color: #3387dd;
 }
 
 
