--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -145,9 +145,7 @@ body{
   height: 32px;
   line-height: 32px;
   padding-left: 20px;
-  margin-bottom: 1px;
   background-color: #3387dd;
-  box-shadow: inset 0 0px 7px #4078bb;
   input::-webkit-input-placeholder,
   textarea::-webkit-input-placeholder {
     color: #b7cceb;
@@ -289,7 +287,7 @@ body{
   }
 }
 .chat-item.on{
-  background-color: #3387dd;
+  background-color: #1a70c7;
 }
 
 
